crates/overdrive-worker/tests/compile_fail/exec_driver_no_default.stderr
error[E0599]: no function or associated item named `default` found for struct `ExecDriver` in the current scope
 --> tests/compile_fail/exec_driver_no_default.rs:14:31
  |
 14 |     let _driver = ExecDriver::default();
    |                               ^^^^^^^ function or associated item not found in `ExecDriver`
    |
note: if you're trying to build a new `ExecDriver`, consider using `ExecDriver::new` which returns `ExecDriver`
   --> src/driver.rs
    |
    |     pub fn new(cgroup_root: PathBuf, clock: Arc<dyn Clock>, fs: Arc<dyn CgroupFs>) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
